--- a/index.html
+++ b/index.html
@@ -42,66 +42,66 @@
     <a href="#">Contact With us</a>
     <h2 id="ROSE">ROSE</h2>
     <div >
-            <div><img src="img/rose.jpg">
-                <img src="img/rose2.jpeg">
-                <img src="img/rose3.jpeg">
-                <img src="img/rose5.jpg"></div>
-            <div><img src="img/rose6.jpg">
-                <img src="img/rose8.jpeg">
-                <img src="img/rose9.jpeg">
-                <img src="img/rose10.jpg">
+            <div><img src="rose.jpg">
+                <img src=".rose2.jpeg">
+                <img src="rose3.jpeg">
+                <img src="rose5.jpg"></div>
+            <div><img src="rose6.jpg">
+                <img src="rose8.jpeg">
+                <img src="rose9.jpeg">
+                <img src="rose10.jpg">
                 
             </div>
     </div>
     <h2 id="damask">Damask Rose</h2>
     <div>
-        <img src="img/d1.jpeg">
-        <img src="img/d2.jpeg">
-        <img src="img/d3.jpeg">
-        <img src="img/d4.jpeg">
+        <img src="d1.jpeg">
+        <img src="d2.jpeg">
+        <img src="d3.jpeg">
+        <img src="d4.jpeg">
     </div>
     <h2 id="Lincoln">Mr.Lincoln Rose</h2>
     <div>
-        <img src="img/m1.jpeg">
-        <img src="img/m4.jpeg">
-        <img src="img/m2.jpeg">
-        <img src="img/m3.jpeg">
+        <img src="m1.jpeg">
+        <img src="m4.jpeg">
+        <img src="m2.jpeg">
+        <img src="m3.jpeg">
     </div>
     <h2 id="Peace">Rosa Peace</h2>
     <div>
-        <img src="img/r1.jpeg">
-        <img src="img/r2.jpeg">
-        <img src="img/r3.jpeg">
-        <img src="img/r4.jpeg">
+        <img src="r1.jpeg">
+        <img src="r2.jpeg">
+        <img src="r3.jpeg">
+        <img src="r4.jpeg">
     </div>
     <h2 id="Orchid">ORCHID</h2>
     <h2 id="Pink">Pink Phalaenopsis Orchid</h2>
     <div>
-        <img src="img/p1.jpeg">
-        <img src="img/p2.jpeg">
-        <img src="img/p3.jpeg">
-        <img src="img/p4.jpeg">
+        <img src="p1.jpeg">
+        <img src="p2.jpeg">
+        <img src="p3.jpeg">
+        <img src="p4.jpeg">
     </div>
     <h2 id="Boat">Boat Orchid</h2>
     <div>
-        <img src="img/b1.jpeg">
-        <img src="img/b2.jpeg">
-        <img src="img/b3.jpeg">
-        <img src="img/b4.jpeg">
+        <img src="b1.jpeg">
+        <img src="b2.jpeg">
+        <img src="b3.jpeg">
+        <img src="b4.jpeg">
     </div>
     <h2 id="Vanilla">Vanilla Orchids</h2>
     <div>
-        <img src="img/v1.jpeg">
-        <img src="img/v2.jpeg">
-        <img src="img/v3.jpeg">
-        <img src="img/v4.jpeg">
+        <img src="v1.jpeg">
+        <img src="v2.jpeg">
+        <img src="v3.jpeg">
+        <img src="v4.jpeg">
     </div>
     <h2 id="Iris">Iris</h2>
     <div>
-        <img src="img/i1.jpeg">
-        <img src="img/i2.jpeg">
-        <img src="img/i3.jpeg">
-        <img src="img/i4.jpeg">
+        <img src="i1.jpeg">
+        <img src="i2.jpeg">
+        <img src="i3.jpeg">
+        <img src="i4.jpeg">
     </div>
     <div>
         <form>
