--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <a href="#">Contact With us</a>
     <h2 id="ROSE">ROSE</h2>
     <div >
-            <div><img src="rose.png">
-                <img src=".rose2.png">
-                <img src="rose3.png">
-                <img src="rose5.png"></div>
-            <div><img src="rose6.png">
+            <div><img src="rose.jpeg">
+                <img src=".rose2.jpeg">
+                <img src="rose3.jpeg">
+                <img src="rose5.jpeg"></div>
+            <div><img src="rose6.jpeg">
                 <img src="rose8.jpeg">
                 <img src="rose9.jpeg">
                 <img src="rose10.jpg">
