--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <a href="#">Contact With us</a>
     <h2 id="ROSE">ROSE</h2>
     <div >
-            <div><img src="rose.jpeg">
-                <img src=".rose2.jpeg">
+            <div><img src="rose.jpg">
+                <img src="rose2.jpeg">
                 <img src="rose3.jpeg">
-                <img src="rose5.jpeg"></div>
+                <img src="rose5.jpg"></div>
             <div><img src="rose6.jpeg">
                 <img src="rose8.jpeg">
                 <img src="rose9.jpeg">
