--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="rose2.jpeg">
                 <img src="rose3.jpeg">
                 <img src="rose5.jpg"></div>
-            <div><img src="rose6.jpeg">
+            <div><img src="rose6.jpg">
                 <img src="rose8.jpeg">
                 <img src="rose9.jpeg">
                 <img src="rose10.jpg">
