--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <ul>First Name: <input type="text" autofocus="" id="ls" placeholder="Enter your Last Name" required=""></ul>
                 <ul>Last Name: <input type="text" autofocus="" id="ls" placeholder="Enter your Last Name" required=""></ul>
                 <ul>Password: <input type="password" autofocus="" id="p" placeholder="Enter your Password" required=""></ul>
-                <ul>Email: <input type="email" autofocus="" id="e" placeholder="example@gmail.com" required=""></ul>
-                <ul>Contact: <input type="text" autofocus="" id="cc" placeholder="Enter your contact number" required=""></ul>
+                <ul>Email: <input type="email" autofocus="" id="e" placeholder="aaaaaa@gmail.com" required=""></ul>
+                <ul>Contact: <input type="text" autofocus="" id="cc" placeholder="" required=""></ul>
                 <ul>Gender: <input type="radio" name="sx" value="Male"> Male <input type="radio" name="sx" value="Female"> Female <input type="radio" name="sx" value="Other">Other</ul>
                 <input type="submit" class="submit" value="Submit"> 
             </fieldset>
