--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="#Iris">Iris</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere debitis modi odit. Quos, aliquam velit.</p>
     </li></ol>
-    <a href="form">Contact With us</a>
+    <a href="#form">Contact With us</a>
     <h2 id="ROSE">ROSE</h2>
     <div >
             <div><img src="rose.jpg">
@@ -104,7 +104,7 @@
         <img src="i4.jpeg">
     </div>
     <div>
-        <form>
+        <form id="form">
             <fieldset>
                 <legend>Contact Form</legend>
                 <ul>First Name: <input type="text" autofocus="" id="ls" placeholder="Enter your Last Name" required=""></ul>
